--- a/assets/scss/breakpoints/_mobileup.scss
+++ b/assets/scss/breakpoints/_mobileup.scss
@@ -177,7 +177,7 @@ HEADER STYLING
 
 .header {
 	background-color: $background-color;
-	background-image: url('../img/touring.jpg');
+	background-image: url('../img/blog-mast1.jpg');
 	background-size: cover;
 	background-position: center center;
 	color: white;
@@ -200,7 +200,7 @@ HEADER STYLING
 		text-transform: uppercase;
 
 		a {
-			color: white;
+			color: $white;
 			text-decoration: none;
 		}
 	}
