--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
                  </li> 
                  {% endfor %}
                  <li> <a href="https://github.com/himangshuj" target="_blank">GitHub</a></li>
-                 <li><a href="https://himangshu.io/resume/">Resume</a></li>
+                 <li><a href="http://himangshu.io/resume/" target="_blank">Resume</a></li>
              </ul>
          </nav>
      </div>
